# salary-calculation

./: .dockerignore  .gitignore  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  e2e_test.py  pyproject.toml  requirements.txt  业绩工资制度.docx
.github/workflows/: ci.yml  mirror-bases.yml
alembic/: README  env.py
alembic/versions/: 189805f8dadd_data_migrate_rates_to_policy.py  42d8290d722d_month_add_results_stale.py  5470c8774b8d_baseline_snapshot.py  55a813f6009e_salesrecord_add_extra.py  94e32f05f688_add_detail_rows_table.py  bd1a32964df9_add_hot_table_indexes.py
backend/app/: auth.py  config.py  db.py  main.py  schemas.py
backend/scripts/: migrate_rates_to_db.py  migrate_rates_to_policy.py  seed_data.py
backend/tests/: conftest.py  test_auth.py  test_db.py  test_engine_bridge.py  test_import_master.py  test_months.py  (+6 more)
deploy/: Dockerfile.backend  Dockerfile.frontend  README.md  deploy.sh  docker-compose.prod.yml  entrypoint.sh  nginx.conf  setup-server.sh
docs/: ARCHITECTURE.md  RELEASE_NOTES.md
frontend/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
migrations/: 001_add_policy_version_id.sql  002_month_calculation_refactor.py  003_add_results_stale_and_extra.py
salary_engine/: __init__.py  calculator.py  cli.py  exporter.py  exporter_helpers.py  importer.py  margin.py  models.py  onduty.py  rates.py
tests/: conftest.py  test_calculator.py  test_cli_integration.py  test_exporter.py  test_importer.py  test_margin.py  test_onduty.py  test_rates.py  test_realdata_june.py  test_smoke.py
(+59 files in other folders)
