[project]
name = "salary-engine"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["pandas>=2.0", "openpyxl>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27"]
web = ["fastapi>=0.110", "uvicorn[standard]>=0.27", "sqlalchemy>=2.0", "itsdangerous>=2.1", "python-multipart>=0.0.9"]

[project.scripts]
salary-engine = "salary_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["salary_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
